src/test/deca/codegen/valid/class/cast-class.deca
// Description:
//    Programme minimaliste testant le cast entre classe.
//
// Resultats:
//    

class A{
    int a = 1;
}

class B extends A{}

{
    B b = new B();
    A a = (A) (b);
    println(a.a);
}
